<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_factory_password">Input Factory Password</string>
    <string name="about_factory_password_error">Password error，Please input again!</string>
    <string name="accelerate">Accelerate</string>
    <string name="accelerate_complete">Accelerate Complete</string>
    <string name="advance">Advanced tuning</string>
    <string name="air_temp_reverse">Air conditioning temperature swap</string>
    <string name="all_app">All APPs</string>
    <string name="analog_clock">Analog</string>
    <string name="android_version">Android Version</string>
    <string name="apk_folder">APK Folder</string>
    <string name="apk_path">APK path</string>
    <string name="app_name">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_answer">Auto Answer</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_time_gps">Use GPS-provided time</string>
    <string name="auto_time_network">Use network-provided time</string>
    <string name="back_light">Back Light</string>
    <string name="backcar_mirror">Backcar Mirror</string>
    <string name="background_whitelist_app">Apps can keep in the background</string>
    <string name="base_color">Basic color tuning</string>
    <string name="black_screen">Black</string>
    <string name="blue_light_defender">BlueLight Defender</string>
    <string name="bmw_settings">BMW Settings</string>
    <string name="boot_start_logo">Boot Start Logo</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_SettingsLabel">Pairing</string>
    <string name="bt_connect_status">Status:</string>
    <string name="bt_device_name_title">Device Name:</string>
    <string name="bt_device_pin_title">Bluetooth Device Pin:</string>
    <string name="bt_name">Bluetooth Name</string>
    <string name="bt_open_string">Power On</string>
    <string name="bt_settings_text">No Connect</string>
    <string name="bt_status_connected">Connected</string>
    <string name="bt_volume">BT Volume</string>
    <string name="btn_restore">Restore Factory</string>
    <string name="btn_swc_reset">Reset</string>
    <string name="calibrating">"Calibrating, please don't touch"</string>
    <string name="calibration_error">Please click on the buttons in sequence!</string>
    <string name="calibration_moving">"Please don't move"</string>
    <string name="can_box_upgrade">Can Box Upgrade</string>
    <string name="cancel_accelerate">Accelerate Canceled</string>
    <string name="cancel_clean">Clean Canceled</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chinese">中文</string>
    <string name="chinese_tw">繁体中文</string>
    <string name="chip_text">Chip text</string>
    <string name="color_temp">Color Temperature</string>
    <string name="colorful_lights">ColorLight</string>
    <string name="contrast">Contrast</string>
    <string name="copy">Copy</string>
    <string name="copy_data">Copy data</string>
    <string name="date_setting">Date Setting</string>
    <string name="display_door_info">Display door status</string>
    <string name="dynamic_contrast">Dynamic Contrast</string>
    <string name="factory_backcar_guidelines">BackCar Guidelines</string>
    <string name="factory_backcar_radar">BackCar Radar</string>
    <string name="factory_backcar_staticlines">BackCar Staticlines</string>
    <string name="factory_can_version">Can Version:</string>
    <string name="factory_car_model">Choose Car Model</string>
    <string name="forbid_video">Driving Video</string>
    <string name="gps_test">GPS Test</string>
    <string name="grass_grayscale">Grass Grayscale</string>
    <string name="grass_saturation">Grass Saturation</string>
    <string name="grayscale">Grayscale</string>
    <string name="hide_air_temp">Hide air conditioner temperature</string>
    <string name="hotspot">Hotspot</string>
    <string name="hotspot_name">Hotspot Name</string>
    <string name="hotspot_pwd">Hotspot Password</string>
    <string name="hotspot_security">Security</string>
    <string name="install">Install</string>
    <string name="install_apk">Install APK</string>
    <string name="install_tool">Install tool</string>
    <string name="ip_address">IP Addr</string>
    <string name="key_voice_func_string">Voice Key Function</string>
    <string name="lcdvcc">LCDVCC/VCOM</string>
    <string name="lexus_settings">LEXUS Settings</string>
    <string name="mcu_upgrade">MCU Upgrade</string>
    <string name="mic_gain">Mic Gain</string>
    <string name="model">Type</string>
    <string name="modify_imei">Modify IMEI</string>
    <string name="next_prev_reverse">Media tunes reversed</string>
    <string name="off">Off</string>
    <string name="other">Others</string>
    <string name="panel_button_study">Panel Button Study</string>
    <string name="phone_key_selection_string">Phone Key Selection</string>
    <string name="pic_mode">Picture Mode</string>
    <string name="radio_area">FM Area</string>
    <string name="remote_button_study">Remote Key Study</string>
    <string name="rom_size">Flash Size</string>
    <string name="saturation">Saturation</string>
    <string name="screen_off">Screen Off</string>
    <string name="screen_off_effect">Screen Off Effect</string>
    <string name="se_alto">Alto</string>
    <string name="se_balance">Balance</string>
    <string name="se_bass">Bass</string>
    <string name="se_loudness">Loudness</string>
    <string name="se_reset_balance">Reset Balance</string>
    <string name="se_subwoofer">Subwoofer</string>
    <string name="se_treble">Treble</string>
    <string name="serial">Serial No.</string>
    <string name="set_extern_amp">Extern amp</string>
    <string name="setting_automatic_vehicle_selection">Automatically select [Car type]</string>
    <string name="setting_aux_camera_system">AUX System</string>
    <string name="setting_backcar_set">BackCar</string>
    <string name="setting_camera_system">Camera system</string>
    <string name="setting_caraux_switch_mode">Car aux switch mode</string>
    <string name="setting_cartype">Car type</string>
    <string name="setting_ddr_flag">Force to show 2G ddr</string>
    <string name="setting_dvr_cvbs">DVR(CVBS)</string>
    <string name="setting_front_door">Front door exchange</string>
    <string name="setting_full_screen">Full Screen</string>
    <string name="setting_gps_mode_selection">GPS mode selection</string>
    <string name="setting_oil_uint_gal">Oil quantity unit</string>
    <string name="setting_orginal_bt">Original car Bluetooth</string>
    <string name="setting_original_car_ui">Drawing original car information UI</string>
    <string name="setting_panel_type">Panel Type</string>
    <string name="setting_rear_door">Rear door exchange</string>
    <string name="setting_temp_uint_f">Temperature unit</string>
    <string name="settings_can_mode">CAN Mode</string>
    <string name="sharpness">Sharpness</string>
    <string name="skin_grayscale">Skin Grayscale</string>
    <string name="skin_saturation">Skin Saturation</string>
    <string name="sky_grayscale">Sky Grayscale</string>
    <string name="sky_saturation">Sky Saturation</string>
    <string name="sound_effect">Sound Effects</string>
    <string name="source_path">Source path</string>
    <string name="speaker_switch_mode">Small speaker switching mode</string>
    <string name="string_voice_btn_enable">Voice button</string>
    <string name="string_voice_wakeup_enable">Voice wake up</string>
    <string name="string_voice_without_wakeup_enable">Wake-up-free voice</string>
    <string name="summary_hotspot_auto_close">Hotspot will turn off if no devices are connected</string>
    <string name="time_format">Time Format</string>
    <string name="time_setting">Time Setting</string>
    <string name="title_about">About</string>
    <string name="title_auto_play_usb">Auto Play Usb</string>
    <string name="title_auto_time">AutoTime</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_bright">Bright</string>
    <string name="title_cellular">Cellular</string>
    <string name="title_clean">Clean</string>
    <string name="title_display">Display</string>
    <string name="title_export_log">Export Log</string>
    <string name="title_float_ball">Float Ball</string>
    <string name="title_hotspot_auto_close">Turn off hotspot automatically</string>
    <string name="title_key_sound">Key Sound</string>
    <string name="title_language">Language</string>
    <string name="title_network">Network</string>
    <string name="title_personal">Personal</string>
    <string name="title_picture">Picture</string>
    <string name="title_power_off_time">Power Off Time：</string>
    <string name="title_production_mode">Mass-production Mode</string>
    <string name="title_restore">Restore</string>
    <string name="title_screen">Screen</string>
    <string name="title_set_map">Map Setting</string>
    <string name="title_sound_effect">Audio</string>
    <string name="title_swc">SWC</string>
    <string name="title_system">System</string>
    <string name="title_time_zone">Time Zone</string>
    <string name="title_touch_calibration">Touch Calibration</string>
    <string name="title_upgrade">Upgrade</string>
    <string name="title_video">Video</string>
    <string name="title_volume">Volume</string>
    <string name="touch_button_study">Touch Button Study</string>
    <string name="usb_mode">Usb Mode</string>
    <string name="usb_protocol">Usb Protocol</string>
    <string name="version">version</string>
    <string name="video_enhance">Video enhancement</string>
    <string name="view_comfort">Viewing comfort</string>
</resources>