<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.carocean.settings.ui.SettingsPreference app:key="model" app:selectable="false" app:title="@string/model" />
    <com.carocean.settings.ui.SettingsPreference app:key="version" app:title="@string/version" />
    <com.carocean.settings.ui.SettingsPreference app:key="rom_size" app:selectable="false" app:title="@string/rom_size" />
    <com.carocean.settings.ui.SettingsPreference app:key="android_version" app:selectable="false" app:title="@string/android_version" />
    <com.carocean.settings.ui.SettingsPreference app:key="ip_address" app:selectable="false" app:title="@string/ip_address" />
    <com.carocean.settings.ui.SettingsPreference app:key="serial" app:selectable="false" app:title="@string/serial" />
</PreferenceScreen>
